# sort_backend

./: CMakeLists.txt  ReadMe.md  package.xml
example/: sort_main.cpp
include/sort_backend/: kalman_filter.hpp  sort_backend.hpp  utils.hpp
src/: kalman_box_tracker.cpp  kalman_filter.cpp  sort_backend.cpp
src/internal/: kalman_box_tracker.cpp  kalman_box_tracker.hpp  kalman_filter.cpp  sort_impl.cpp  sort_impl.hpp  utils.cpp
test/: test_kalman_box_tracker.cpp  test_kalman_filter.cpp  test_sort_backend.cpp  test_utils.cpp
